--- a/src/components/ProductDetails/Sets.css
+++ b/src/components/ProductDetails/Sets.css
@@ -10,6 +10,7 @@
 .ProductsCard {
     display: flex;
     flex-direction: row;
+    padding: 10px;
     border-radius: 20px;
     -webkit-box-shadow: 4px 4px 5px 0px rgba(237, 237, 237, 1);
     -moz-box-shadow: 4px 4px 5px 0px rgba(237, 237, 237, 1);
