--- a/src/components/ProductDetails/Sets.css
+++ b/src/components/ProductDetails/Sets.css
@@ -12,6 +12,7 @@
     flex-direction: row;
     padding: 10px;
     border-radius: 20px;
+    background-color: #ffff;
     -webkit-box-shadow: 4px 4px 5px 0px rgba(237, 237, 237, 1);
     -moz-box-shadow: 4px 4px 5px 0px rgba(237, 237, 237, 1);
     box-shadow: 4px 4px 5px 0px rgba(237, 237, 237, 1);
@@ -22,7 +23,6 @@
     flex-direction: row;
     width: 300px;
     height: 200px;
-    border-radius: 20px;
 }
 
 @media (max-width:600px) {
